# SIO-U009_Machine-Learning

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: python-package.yml
scripts/: build.bat  setup.bat
sio_u009/: algorithm_components.py  display.py  main.py  validation_functions.py
sio_u009/algorithm_components/: display.py  main.py  polynomial.py  validation_functions.py
sio_u009/exercices/module18/: data_tools.py  datas.py  main.py  plot_functions.py  simple_linear_regression.py
sio_u009/model_capacity/: main.py
